tests/errors/substructural/composition/enum_copy_with_non_copy_payload.sim

            enum Bad: Copy { A: &mut i64 }
            